Fixed search bar on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3267,7 +3267,7 @@ ul.nav li:nth-child(2) h4 span:nth-child(2) {
 
  .input-wrapper {
 	 position: relative;
-	 width: 325px;
+	 width: 315px;
 	 margin: 0px 0px 32px 5px;
 	 display: inline-block;
 }
